--- a/civiclens/package.json
+++ b/civiclens/package.json
@@ -10,16 +10,20 @@
   },
   "dependencies": {
     "googleapis": "^154.1.0",
+    "lucide-react": "^0.536.0",
     "mongodb": "^6.18.0",
     "mongoose": "^8.17.0",
     "next": "15.4.5",
     "next-auth": "^4.24.11",
+    "next-themes": "^0.4.6",
     "react": "19.1.0",
     "react-dom": "19.1.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@types/node": "24.1.0",
+    "@types/react": "19.1.9",
     "eslint": "^9",
     "eslint-config-next": "15.4.5",
     "tailwindcss": "^4"
