--- a/civiclens/package.json
+++ b/civiclens/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.11.0",
     "googleapis": "^154.1.0",
     "lucide-react": "^0.536.0",
     "mongodb": "^6.18.0",
@@ -17,7 +18,8 @@
     "next-auth": "^4.24.11",
     "next-themes": "^0.4.6",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "react-hot-toast": "^2.5.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
